--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,16 @@
   "trailingSlash": false,
   "rewrites": [
     { "source": "/(.*)", "destination": "/$1.html" }
+  ],
+  "headers": [
+    {
+      "source": "/assets/fonts/(.*)\\.(woff|woff2|ttf|otf)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 }
