--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "rewrites": [
-    { "source": "/(.*)", "destination": "/$1.html" }
+    { "source": "/(.*)", "destination": "/$1" }
   ],
   "headers": [
     {
