--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,15 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "redirects": [
-    {
-
+       {
+   "source": "/old-page",
+   "destination": "/new-page",
+   "permanent": true
+ },
+ {
+   "source": "/another-old",
+   "destination": "/another-new",
+   "permanent": true
     }
   ],
   "headers": [
